-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Upstream kernel guys found a bug in cl_env_percpu_init:
if (rc != 0) { /* Indices 0 to i (excluding i) were correctly initialized, * thus we must uninitialize up to i, the rest are undefined. */ for (j = 0; j < i; j++) { cle = &cl_env_percpu[i]; lu_context_exit(&cle->ce_ses); lu_context_fini(&cle->ce_ses); lu_env_fini(&cle->ce_lu); } }
Here clearly cle = &cl_env_percpu[i] should be cle = &cl_env_percpu[j];
- is related to
-
LU-4423
Tracking of patches from upstream kernel to Lustre client
-
- Resolved
-