lustre/obdclass/cl_object.c
@@ -911,7 +911,7 @@ static int cl_env_percpu_init(void)
 		/* Indices 0 to i (excluding i) were correctly initialized,
 		 * thus we must uninitialize up to i, the rest are undefined. */
 		for (j = 0; j < i; j++) {
-			cle = &cl_env_percpu[i];
+			cle = &cl_env_percpu[j];
 			lu_context_exit(&cle->ce_ses);
 			lu_context_fini(&cle->ce_ses);
 			lu_env_fini(&cle->ce_lu);
